--- a/index.html
+++ b/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Restaurant Control Panel</title>
+    <title>Resto-Auto Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 </head>
-<body class="bg-gray-900 text-white p-6">
-    <div class="flex justify-between mb-8 bg-gray-800 p-6 rounded-lg border-b-4 border-blue-500">
-        <h1 class="text-2xl font-bold">Restaurant Admin Dashboard</h1>
-        <div id="status" class="text-red-500 font-bold">WhatsApp: Connecting...</div>
-    </div>
+<body class="bg-[#0f172a] text-slate-200 min-h-screen">
+    <div class="max-w-7xl mx-auto p-6">
+        <header class="flex justify-between items-center bg-slate-800 p-6 rounded-2xl shadow-2xl mb-8 border-b-4 border-orange-500">
+            <div>
+                <h1 class="text-3xl font-black text-orange-500 tracking-tighter italic">RESTAURANT PRO</h1>
+                <p id="status" class="text-xs text-red-400 mt-1 uppercase tracking-widest font-bold">● Connecting WhatsApp...</p>
+            </div>
+            <div class="flex gap-4">
+                <div class="bg-slate-700 px-6 py-2 rounded-xl text-center">
+                    <p class="text-xs text-slate-400">Today's Sales</p>
+                    <p id="total-earning" class="text-xl font-bold">₹0</p>
+                </div>
+                <button onclick="location.href='/download-report'" class="bg-green-600 hover:bg-green-700 px-6 py-2 rounded-xl font-bold transition">📥 Export XL</button>
+            </div>
+        </header>
 
-    <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
-        <div class="bg-gray-800 p-4 rounded-lg">
-            <h2 class="font-bold border-b border-gray-700 mb-4 pb-2 text-blue-400">Settings</h2>
-            <div id="qr-box" class="bg-white p-2 rounded mb-4 flex justify-center min-h-[150px] items-center text-black italic">Wait for QR...</div>
-            <input id="blockNum" type="text" placeholder="Mobile No (91...)" class="w-full p-2 bg-gray-700 rounded mb-2">
-            <button onclick="toggleBot(true)" class="w-full bg-red-600 p-2 rounded mb-4 hover:bg-red-700 transition">Off Automation</button>
-            <button onclick="location.href='/download-report'" class="w-full bg-green-600 p-2 rounded hover:bg-green-700 transition">📥 Download XL Report</button>
-        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
+            <div class="bg-slate-800 p-6 rounded-2xl shadow-xl h-[75vh] flex flex-col">
+                <h2 class="text-lg font-bold mb-4 flex justify-between items-center">
+                    Contacts 📱 
+                    <span id="qr-status" class="text-[10px] bg-slate-700 px-2 py-1 rounded">SCAN QR BELOW</span>
+                </h2>
+                <div id="qr-container" class="mb-4 flex justify-center bg-white p-2 rounded-lg"></div>
+                <div id="contact-list" class="flex-grow overflow-y-auto space-y-2 pr-2 custom-scrollbar">
+                    <p class="text-slate-500 text-sm italic">Fetch data from WhatsApp...</p>
+                </div>
+                <button onclick="updateRules()" class="w-full mt-4 bg-orange-600 py-3 rounded-xl font-bold hover:bg-orange-700 transition shadow-lg">Save Settings</button>
+            </div>
 
-        <div class="md:col-span-3 bg-gray-800 p-4 rounded-lg">
-            <h2 class="font-bold border-b border-gray-700 mb-4 pb-2 text-blue-400">Live Orders</h2>
-            <div id="order-container" class="space-y-4"></div>
+            <div class="lg:col-span-3 space-y-6">
+                <h2 class="text-xl font-bold border-l-4 border-blue-500 pl-4">Live Orders</h2>
+                <div id="order-list" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    </div>
+            </div>
         </div>
     </div>
 
@@ -33,50 +49,73 @@
         const firebaseConfig = { apiKey: "AIzaSyAb7V8Xxg5rUYi8UKChEd3rR5dglJ6bLhU", databaseURL: "https://t2-storage-4e5ca-default-rtdb.firebaseio.com" };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
-
         const socket = io();
-        socket.on('qr', (qr) => {
-            document.getElementById('qr-box').innerHTML = `<img src="https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qr)}">`;
-        });
-        socket.on('status', (s) => {
-            document.getElementById('status').innerText = "WhatsApp: " + s;
-            document.getElementById('status').className = s === 'Connected' ? 'text-green-500 font-bold' : 'text-red-500 font-bold';
-        });
 
-        // Real-time Orders Listener
-        db.ref('orders/active').on('value', (snap) => {
-            const container = document.getElementById('order-container');
-            container.innerHTML = '';
+        // Analytics Logic
+        db.ref('orders/active').on('value', snap => {
+            let earnings = 0;
+            const list = document.getElementById('order-list');
+            list.innerHTML = '';
             snap.forEach(child => {
                 const o = child.val();
+                earnings += o.total;
+                list.innerHTML += `
+                    <div class="bg-slate-800 p-5 rounded-2xl border-t-4 border-blue-500 shadow-xl relative overflow-hidden">
+                        <div class="flex justify-between items-start mb-4">
+                            <div>
+                                <h4 class="text-blue-400 font-bold text-lg leading-none">${o.details}</h4>
+                                <span class="text-[10px] text-slate-500">ID: ${o.id}</span>
+                            </div>
+                            <span class="bg-blue-900 text-blue-200 text-[10px] px-2 py-1 rounded-full font-bold">PENDING</span>
+                        </div>
+                        <p class="text-sm text-slate-300 mb-4 line-clamp-2 italic">📍 ${o.address}</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-black text-white">₹${o.total}</span>
+                            <button onclick='markDone(${JSON.stringify(o)})' class="bg-blue-600 hover:bg-blue-500 px-6 py-2 rounded-lg font-bold text-sm transition">DONE</button>
+                        </div>
+                    </div>`;
+            });
+            document.getElementById('total-earning').innerText = '₹' + earnings;
+        });
+
+        function markDone(order) {
+            socket.emit('mark-done', order);
+            db.ref('orders/completed/' + order.id).set({...order, timestamp: Date.now()});
+            db.ref('orders/active/' + order.id).remove();
+        }
+
+        socket.on('qr', qr => {
+            document.getElementById('qr-container').innerHTML = `<img src="https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qr)}">`;
+        });
+
+        socket.on('status', s => { 
+            document.getElementById('status').innerText = '● ' + s;
+            document.getElementById('status').className = s === 'Connected' ? 'text-xs text-green-400 mt-1 uppercase tracking-widest font-bold' : 'text-xs text-red-400 mt-1 uppercase tracking-widest font-bold';
+        });
+
+        socket.on('contacts', list => {
+            const container = document.getElementById('contact-list');
+            container.innerHTML = '';
+            list.forEach(c => {
+                const cleanId = c.id.replace(/\D/g, '');
                 container.innerHTML += `
-                <div class="bg-gray-700 p-4 rounded-lg flex justify-between border-l-4 border-green-500">
-                    <div>
-                        <p class="text-blue-300 font-bold">${o.details} (₹${o.total})</p>
-                        <p class="text-sm">📍 ${o.address}</p>
-                        <p class="text-xs text-gray-400">${o.pay} | ${o.time}</p>
-                    </div>
-                    <button onclick="doneOrder('${o.id}')" class="bg-blue-600 px-4 py-2 rounded self-center hover:bg-blue-500">Done</button>
-                </div>`;
+                    <label class="flex items-center justify-between bg-slate-700/50 p-3 rounded-xl cursor-pointer hover:bg-slate-700 transition">
+                        <span class="text-sm truncate w-40">${c.name}</span>
+                        <input type="checkbox" value="${cleanId}" class="block-check w-5 h-5 accent-orange-500">
+                    </label>`;
             });
         });
 
-        function doneOrder(id) {
-            db.ref('orders/active/' + id).once('value', (s) => {
-                db.ref('orders/completed/' + id).set(s.val());
-                db.ref('orders/active/' + id).remove();
+        function updateRules() {
+            const checks = document.querySelectorAll('.block-check');
+            db.ref('blocked_users').remove();
+            checks.forEach(c => {
+                if(c.checked) db.ref('blocked_users/' + c.value).set(true);
             });
+            alert("Automation rules saved!");
         }
 
-        function toggleBot(status) {
-            const num = document.getElementById('blockNum').value;
-            if(!num) return alert("Pehle number likhein!");
-            db.ref('settings/blocked/' + num).set(status);
-            alert("Automation disabled for " + num);
-        }
-
-        // Keep Alive (Server ko active rakhne ke liye)
-        setInterval(() => { fetch('/'); }, 120000);
+        setInterval(() => fetch('/'), 120000);
     </script>
 </body>
 </html>
